all 01/28 edits in

--- a/abc_comprehensivecba_answerstoreferees_secondround.tex
+++ b/abc_comprehensivecba_answerstoreferees_secondround.tex
@@ -26,7 +26,7 @@
 \begin{titlepage}
 \newgeometry{top=.8in, bottom=.8in, left=.8in, right=.8in}
 
-\title{\Large \textbf{Second-round Responses to the Editor and the Referees \\ Quantifying the Life-cycle \\ Benefits of an Influential Early Childhood Program}}
+\title{\Large \textbf{Responses to the Editor and the Referees \bigskip \bigskip  \bigskip \bigskip \\ Quantifying the Life-cycle \\ Benefits of an Influential Early Childhood Program}}
 
 \author{
 Jorge Luis Garc\'{i}a\\
@@ -59,7 +59,7 @@ University of Southern California}
 
 \noindent \textbf{Editor, Comment 1. Please send in what you want me and the referees to consider to be the final version. When you send in your revision, make sure to also include a reply to me as well as to the remaining referee, explaining what you did with the comments you received.} 
 
-\noindent \textit{Response.} We are submitting what we consider our final version. Responses to your questions and those of the referees follow. 
+\noindent \textit{Response.} We are submitting what we consider our final version. We have responded to your questions and those of the referees. 
 
 \noindent \textbf{Editor, Comment 2. Keep in mind that this is, ultimately, your paper. I very much hope that we can get by with one last round of revisions at this point. I believe this is in our mutual interest. This, obviously, depends much on you providing a dedicated revision. It should not exceed the current length by more than three pages, i.e. not exceed 42 pages, including the references.}
 
@@ -74,8 +74,6 @@ University of Southern California}
 \noindent \textit{Response.} The front page of the paper has a link to the online repository containing the code for each and all of our computations, together with the corresponding replication instructions. We cannot post the data because it is not open access, but we can facilitate any person interested in replicating our computations the adequate contacts to request access to the data. Once access to the data is provided, we can provide help with replicating any of our computations.
 
 \section*{Comments of Reviewer 1}
-
-\noindent \textit{\textbf{[JLG: All of your edits to the answers to reviewer 1 were included in the revised text of today. Any edits you made to this document that applied to the paper were included in the paper.]}}
 
 \noindent \textbf{Referee 1, Comment 1. None of the children came from Raleigh, NC. All lived within 8 miles of the Frank Porter Graham Child Development Center in Chapel Hill, NC where the early education program was provided. All lived inside Orange County and were born in Memorial Hospital. (These are well-reported facts.)}
 
@@ -117,9 +115,9 @@ supp( \bm{Y}_{e,a}^1, \bm{X}^1_{e,a}, \bm{B}_e, \bm{\varepsilon}_{e,a} ) \subset
 supp( \bm{Y}_{e,a}^1, \bm{X}^1_{e,a}, \bm{B}_e, \bm{\varepsilon}_{e,a} ) \subseteq supp( \bm{Y}_{e,a}^d, \bm{X}^d_{e,a}, \bm{B}_e, \bm{\varepsilon}_{e,a} ).  \label{eq:ref3}
 \end{equation}
 
-\noindent \textit{Response.} It is correct that we do not observe $\bm{X}_{k,a}^1$ for $k = n$. However, we seek to construct counterfactuals in the ``$e$'' sample and do require this condition to do so. In our paper, we estimate $\bm{\phi}_{k,a}^d \left( \cdot, \cdot \right)$ in Equation~\eqref{eq:outcome} of the main text. We need to guarantee that the sample that we use to estimate the function covers the support of the arguments of these functions. Thus, the support of the inputs and the background variables in the productions functions in the non-experimental sample needs to be ample enough to cover all realized values of the arguments in the experimental data. We document that this holds in Appendix~\ref{app:containsupport}. 
+\noindent \textit{Response.} It is correct that we do not observe $\bm{X}_{k,a}^1$ for $k = n$. However, please note that we seek to construct counterfactuals in the ``$e$'' sample and require Assumption~\ref{ass:contain} to do so. In our paper, we estimate $\bm{\phi}_{k,a}^d \left( \cdot, \cdot \right)$ in Equation~\eqref{eq:outcome} of the main text. We need to guarantee that the non-experimental sample that we use to estimate the function covers the support of the arguments of these functions. Thus, the support of the inputs and the background variables in the productions functions in the non-experimental sample needs to be ample enough to cover all realized values of the arguments in the experimental data. We document that this holds in Appendix~\ref{app:containsupport}. 
 
-There is a typo in the referee's Equation~\eqref{eq:ref1}: the right- and the left-hand side of the equations are the exact same. Equation~\eqref{eq:ref2} is not really a support condition of interest. We are not trying to use the control group in the experimental sample to forecast in the treatment group in the experimental sample, which the referee requests that we do. A similar remark applies regarding the comments of the referee in Equation~\eqref{eq:ref3}. A way to understand our assumption is that we are using the non-experimental sample---which given the absence of treatment is a control group---to forecast in the experimental sample and thus we require
+There is a typo in the referee's Equation~\eqref{eq:ref1}: the right- and the left-hand side of the equations are the exact same. Equation~\eqref{eq:ref2} is not really a support condition of interest. We are not trying to use the control group in the experimental sample to forecast in the treatment group in the experimental sample, which the referee requests that we do (we do use it to test our assumptions, however). A similar remark applies regarding the comments of the referee in Equation~\eqref{eq:ref3}. A way to understand our assumption is that we are using the non-experimental sample---which given the absence of treatment is a control group---to forecast in the experimental sample and thus we require
 
 \begin{equation}
 supp( \bm{Y}_{e,a}^d, \bm{X}^d_{e,a}, \bm{B}_e, \bm{\varepsilon}_{e,a} ) \subseteq supp( \bm{Y}_{n,a}^0, \bm{X}^0_{n,a}, \bm{B}_n, \bm{\varepsilon}_{n,a} ).  \label{eq:ref4},
@@ -141,21 +139,21 @@ which holds as a direct consequence of Assumption~\ref{ass:contain}.
 
 \textbf{which seems to be implied by Assumptions~\ref{ass:summary} to \ref{ass:exog}. The second is the support condition Assumption~\ref{ass:contain}. Why not presenting it this way? Am I missing something?}
 
-\noindent \textit{Response.} Assumption~\ref{ass:summary} states and clarifies the economic content that implies Equation~\eqref{eq:ref4}. We present the assumption and derive the implications in Equations~\eqref{eq:suff1},~\eqref{eq:suff2}, and~\eqref{eq:nec},  which include Equations~\eqref{eq:ref4}. However, we find it clarifying to distinguish the components of the technology arising from observables from the components due to unobservables. Note also that including $\bm{\varepsilon}_{k,a}^d$ in the invariance assumption provides us with additional implications that we test. The analysis as presented generated testable implications which we test and plead to keep them in the text.
+\noindent \textit{Response.} Assumption~\ref{ass:summary} states and clarifies the economic content that implies Equation~\eqref{eq:ref4}. We present the assumption and derive the implications in Equations~\eqref{eq:suff1},~\eqref{eq:suff2}, and~\eqref{eq:nec},  which include Equations~\eqref{eq:ref4}. We find it clarifying to distinguish the components of the technology arising from observables from the components due to unobservables. Note also that including $\bm{\varepsilon}_{k,a}^d$ in the invariance assumption provides us with additional implications that we test. The analysis as presented generated testable implications which we test. We plead to keep this analysis as it provides additional tests of our model. 
 
 \noindent \textbf{Referee 2, Comment 3. It seems like we need some assumption about $\bm{X}_{e,a}^d$. In general, if Assumptions~\ref{ass:summary} to \ref{ass:exog} hold but I want to identify $\mathbb{E} \left[ \bm{Y}_{e,a} | \bm{B} \in \mathcal{B}_0 \right]$ for $a^* < a$, I typically won't observe $\bm{X}_{e,a}^d$ in the data but if I can't observe $\bm{X}_{e,a}^d$ why is exogeneity useful? Thus it seems that for identification we need an additional assumption about identification of $\bm{X}_{e,a}^d$. It seems like essentially just assuming $G_{e,a}^d \left( \bm{x} \right)$ is identified in my example above.} 
 
-\noindent \textit{Response.} We assume that the referee means ``observation of $\bm{X}_{e,a}^d$'' rather than ``identification.'' We address this point with our support assumption (Assumption~\ref{ass:contain}). \textbf{Step 3} in Section~\ref{sec:forecasting} explains and justifies the inputs that we use. The inputs that generate future values need to be available in the non-experimental sample and are used to generate outcomes through an invariant technology. 
+\noindent \textit{Response.} We assume that the referee means ``observation of $\bm{X}_{e,a}^d$'' rather than ``identification.'' The referee is absolutely correct that we need a support condition. We address this point with our support assumption (Assumption~\ref{ass:contain}). \textbf{Step 3} in Section~\ref{sec:forecasting} explains and justifies the inputs that we use. The inputs that generate future values need to be available in the non-experimental sample and are used to generate outcomes through an invariant technology. 
 
 \section*{Comments of Reviewer 3}
 
 \noindent \textbf{Referee 3, Comment 1. A key assumption is that the mapping between predictors and outcomes to be constant across children, parents, and grand-children, once you control for background variables. Can't this assumption be relaxed to allow for interactions between cohort and predictors/outcomes in a parametric/restrictive way? For example, I suppose you could allow for say a (e.g. linear) trend between cohort of birth and these variables. Can data be informative about how one would specify such a trend?}
 
-\noindent \textit{Response.} We only make the assumption of invariance for one generation. Our model is not necessarily an OLG model. In addition, we can allow for general conditioning on covariates but we need to satisfy support conditions. For example, we can allow for polynomial age or work-experience trends. In our application, we test and do not reject invariance without doing so.
+\noindent \textit{Response.} We only make the assumption of invariance for one generation. Our model is not necessarily an OLG model. In addition, we can allow for general conditioning on covariates but we need to satisfy support conditions. For example, we can allow for polynomial age or work-experience trends. In our application, we test and do not reject invariance without doing so. Extrapolation is a serious issue and we now say so.
 
 \noindent \textbf{Referee 3, Comment 2. I didn't fully understand your response to my question of cross-equation restrictions. I understand you use multiple data sets, but it seems to be that there is more than one outcome per data set. Using such restrictions should not only improve efficiency but it would also be important in terms of interpreting the results.} 
 
-\noindent \textit{Response.} Your point is a good general point. Cross-equation restrictions improve efficiency. Let us clarify that we forecast each of the outcomes in Figure~\ref{figure:main} using different datasets. Our paper explains the datasets used for each outcome. In terms of implementing our  strategy, the benefit from imposing cross-equation restrictions is to produce additional testable implications as well as efficiency. We now clarify that these restrictions can be imposed when stating Assumption~\ref{ass:summary}. As we state above, in our case it is not possible to do so because different outcomes come from different datasets. 
+\noindent \textit{Response.} Your point is a good general point. Cross-equation restrictions improve efficiency. We are using them in extracting factors from multiple measurements. However, we forecast each of the many outcomes in Figure~\ref{figure:main} using different datasets. Our paper explains the datasets used for each outcome. In terms of implementing our  strategy, the benefit from imposing cross-equation restrictions is to produce additional testable implications as well as efficiency. We now clarify that these restrictions can be imposed when stating Assumption~\ref{ass:summary}. As we state above, in our case it is not possible to impose these restrictions in most cases because different outcomes come from different datasets. 
 
 \noindent \textbf{Referee 3, Comment 3. Are the gains in labor income concentrated among those whose health improved? Presumably, the policymakers care about how the joint distributions change. If the paper is supposed to be a template, it would be useful to know how the authors would suggest other researchers could incorporate such restrictions in future work.}
 
@@ -163,7 +161,7 @@ which holds as a direct consequence of Assumption~\ref{ass:contain}.
 
 \noindent \textbf{Referee 3, Comment 4. I am still confused why one needs a randomized experiment if one is willing to make the assumptions you invoke. Under your assumptions, what is so special about experimentally induced variation in inputs. Any variation would do, including observational variation, right? Put differently, suppose you want to use your framework in a setting with only observational variation in inputs. Would I need to change or modify any assumptions? If not, I don't see what role the experiment per se plays.}
 
-\noindent \textit{Response.} Your point is dead-on. But note that the experiment allows us to test exogeneity rather than impose it. Assumption~\ref{ass:exog} allows us to identify and estimate production functions in the non-experimental samples when both the outputs and the inputs are observed. Assumption~\ref{ass:summary} states that the production functions are identical across experimental and non-experimental samples (and provides testable implications derived from this). The experiment is also crucial to our procedure because it sets the treatment-control difference in the outcomes of interest through the experimentally-induced changes in the inputs that we use to forecast. This is what many policy changes would do. The experiment gives us a policy-relevant exogenous change in the inputs. It fixes the goal of the analysis in the non-experimental sample.
+\noindent \textit{Response.} Your point is dead-on. But note that the experiment allows us to test exogeneity rather than impose it. We do that in the paper. Assumption~\ref{ass:exog} allows us to identify and estimate production functions in the non-experimental samples when both the outputs and the inputs are observed. Assumption~\ref{ass:summary} states that the production-function mappings are identical across experimental and non-experimental samples (and provides testable implications derived from this). The experiment is also useful because it sets the treatment-control difference in the outcomes of interest through the experimentally-induced changes in the inputs that we use to forecast. This is what many policy changes would do. The experiment gives us a policy-relevant exogenous change in the inputs. It fixes the goal of the analysis in the non-experimental sample.
 
 \noindent \textbf{Referee 3, Comment 5. The authors conclude with the cautionary note that the program they study was targeted to a disadvantaged. Related to this point, the authors may want to emphasize the homogeneity assumption underlying their forecast exercise. At least in other settings, one would expect there to be considerable heterogeneity in effects even among observationally equivalent children and parents.}
 
@@ -177,13 +175,7 @@ which holds as a direct consequence of Assumption~\ref{ass:contain}.
  
 \noindent \textbf{Referee 4, Comment 2. An alternative form of robustness is to ask what would have happened if the authors had not had access to experimental data through age 30. Suppose they deleted all information in the Abecedarian data set observed after some earlier age, and conducted the projection exercise on the remaining data. What would the estimated rates of return look like? Another way of stating this question: what answers would the authors have reported if forced to write this paper 5, 10, 15, or 20 years ago, using the same projection methodology they developed for the current version? Robustness of the estimates to different possible followup windows would give readers a lot of confidence regarding the authors' results based on the data that happens to be available today. On the other hand, showing that the estimates would have been inaccurate before a particular date would be helpful for researchers interpreting results from more recent evaluations where less time has elapsed since treatment.}
 
-\noindent \textit{Response.} We agree. Your suggested exercise is interesting. We have a small number of inputs, given the choice of inputs that we justify in \textbf{Step 3} in Section~\ref{sec:forecasting}. However, based on the points that you raised, we created additional material for Section~\ref{section:bcaestimates}. That material assesses the general point that you make in your report. We reproduce it next for your convenience. 
-
-\noindent \textbf{\textit{[JJH: We need to state our response in this document---see my edits to Section~\ref{section:bcaestimates}].}}
-
-\noindent \textbf{\textit{[JLG: Ok. I propose that we converge in the material in the main text and then present it here to answer to the referee. That way you do not have to edit two documents with the same stuff.]}}
-
-
+\noindent \textit{Response.} We agree. Your suggested exercise is interesting and we have implemented it and created Section~\ref{section:additionalsens} to describe it in the main text. We have a small number of inputs, given the choice of inputs that we justify in \textbf{Step 3} in Section~\ref{sec:forecasting}. However, based on the points that you raised, we conduct your proposed exercise. That material assesses the general point that you make in your report.
 
 %References
 \singlespace
