--- a/abc_comprehensivecba_revised.tex
+++ b/abc_comprehensivecba_revised.tex
@@ -109,7 +109,7 @@ This paper addresses a fundamental problem that arises in evaluating social prog
 
 As a byproduct, we also address the problem of aggregating evidence from the multiplicity of treatment effects found in ABC/CARE. We estimate economically interpretable aggregates: internal rates of return and benefit/cost ratios that monetize the large array of benefits and costs generated. In constructing these aggregates, we account for model estimation and forecasting error and the welfare cost of taxation to fund programs. Our estimates survive extensive sensitivity analyses.
 
-We construct synthetic cohorts from non-experimental samples. The cohorts are chosen to approximate the life cycles of experimentals in their post-experimental years. We formulate and estimate production functions that predict program treatment effects and assess their within-sample forecast accuracy. Some of the inputs of the estimated production functions are changed by treatment and are measured in both experimental and non-experimental samples. If the production functions mapping inputs to outputs across cohorts are unaffected by treatment (i.e., are ``treatment invariant''), we can safely use them to forecast treatment effects at older ages provided that we accurately forecast the path of future inputs. We test and do not reject treatment invariance in experimental and non-experimental samples that overlap in age.\footnote{See \cite{Hurwicz_1962_structural} for the definition treatment (policy) invariance. We build on the methodology of \citet{Heckman_Pinto_etal_2013_PerryFactor}, who relate intermediate and long-term outcomes in a mediation analysis. However, they do not construct out-of-sample forecasts.} We forecast experimental treatment effects using our estimated production functions applied to non-experimental data with inputs and outputs suitably adjusted for cohort effects. \textbf{[JJH: Jorge: How exactly do we adjust for cohort effects?]}
+We construct synthetic cohorts from non-experimental samples. The cohorts are chosen to approximate the life cycles of experimentals in their post-experimental years. We formulate and estimate production functions that predict program treatment effects and assess their within-sample forecast accuracy. Some of the inputs of the estimated production functions are changed by treatment and are measured in both experimental and non-experimental samples. If the production functions mapping inputs to outputs across cohorts are unaffected by treatment (i.e., are ``treatment invariant''), we can safely use them to forecast treatment effects at older ages provided that we accurately forecast the path of future inputs. We test and do not reject treatment invariance in experimental and non-experimental samples that overlap in age.\footnote{See \cite{Hurwicz_1962_structural} for the definition treatment (policy) invariance. We build on the methodology of \citet{Heckman_Pinto_etal_2013_PerryFactor}, who relate intermediate and long-term outcomes in a mediation analysis. However, they do not construct out-of-sample forecasts.} We forecast experimental treatment effects using our estimated production functions applied to non-experimental data with inputs and outputs suitably adjusted for cohort effects. \textbf{[JJH: Jorge: How exactly do we adjust for cohort effects?] [JLG: In the baseline estimates, we do not account for cohort effects. Our justification for not doing so is in Remark R-2 of page 8. As you know, what we say is that the second aspect of invariance is that structural invariance embeds an implicit assumption about the absence of cohort effects in the technology and distribution of errors in the post-sample period for the experimental sample. I believe that we found this appealing because it does not require for us to assume that there are no cohort effects in the outcomes of interest. Instead, it means there are no cohort effects in the mappings between outcomes and inputs. We are making this very clear in Remark R-2. Later in the paper, we explore perturbations to this. We examine scenarios in which Individuals in ABC/CARE could experience positive cohort effects that might (i) make them more productive and therefore experience wage growth; and (ii) experience a negative shock such as an economic crisis and thus experience a wage decline. To do this, we allow for forecasted labor income to grow or decay at exogenous rates of 0.5\% and -0.5\%. These estimates are in Tables 4 and 5. We set the rates to be consistent with the recent study of life-cycle profiles of Lagakos et al. (2016). Additionally, our estimates of medical costs are analogously adjusted for real growth in medical costs. We discuss that in Appendix G.2.3.]}
 
 Our analysis is a template for estimating the life-cycle gains of social experiments for which there is less than full lifetime follow-up. Supplementing experimental data with non-experimental data enhances the information available from social experiments. Using economic theory and econometric methods to generate empirically concordant forecasts enhances the credibility of the procedure.
 
